--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,10 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Print the version
+        run: echo 'golangci-lint: v1.29'
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
